修改:第六课练习

--- a/css/train/lesson6/lesson.html
+++ b/css/train/lesson6/lesson.html
@@ -62,16 +62,43 @@
           <p class="middle_pink">How</p>
           <p>前端前端前端前端前端 前端前端前端前端前端 前端前端前端前端前端 前端前端前端前端前端</p>
           <span>what---------</span>
-          <span class="span_special">40%</span>
+          <span class="span_special"><em>40%</em></span>
           <br>
           <span>what---------</span>
-          <span class="span_special">40%</span>
+          <span class="span_special"><em>40%</em></span>
           <br>
           <span>what---------</span>
-          <span class="span_special">40%</span>
+          <span class="span_special"><em>40%</em></span>
           <br>
         </div>
       </article>
+
+      <article class="article_bottom">
+        <div class="left">
+          <!-- 左上边 -->
+            <div class="left_top">
+                <p><span style="color: #f5e327;font-size: 72px;font-family:'Microsoft YaHei';font-weight: bold"> <em>THE</em></span> TECHNOLOGE <br> OF FRONT</p>
+                <p>前端技术领域</p>
+                <h5></h5>
+              </div>
+              <div>
+                <span>前</span>
+                <span>端前端</span>
+              </div>
+              <div>
+                <span>前端</span>
+                <img src="./left_bottom_pic.png" alt="">
+              </div>
+
+        </div>
+        <div class="right">
+          <!-- 左下边 -->
+            <div class="left_bottom">
+                
+            </div>
+        </div>
+      </article>
+
     </section>
     <!-- 尾部 -->
     <footer></footer>
