--- a/css/train/lesson6/lesson.html
+++ b/css/train/lesson6/lesson.html
@@ -48,27 +48,33 @@
       <article class="middle">
         <div class="middle_box">
           <p class="middle_green">What</p>
-<p>前端前端前端前端前端 前端前端前端前端前端 前端前端前端前端前端 前端前端前端前端前端 前端前端前端前端前端 前端前端前端前端前端 前端前端前端前端 前端前端前端前端前端 前端前端前端前端前端前端前端前端前端 前端前端前端前端前端前端前端前端前端
-  前端前端前端前端
+          <p>前端前端前端前端前端 前端前端前端前端前端 前端前端前端前端前端 前端前端前端前端前端 前端前端前端前端前端 前端前端前端前端前端 前端前端前端前端 前端前端前端前端前端 前端前端前端前端前端前端前端前端前端 前端前端前端前端前端前端前端前端前端
+            前端前端前端前端
           </p>
         </div>
         <div class="middle_box">
           <p class="middle_yellow">When</p>
-<p>前端前端前端前端前端 前端前端前端前端前端 前端前端前端前端前端 前端前端前端前端前端 前端前端前端前端前端 前端前端前端前端前端 前端前端前端前端 前端前端前端前端前端 前端前端前端前端前端前端前端前端前端 前端前端前端前端前端前端前端前端前端
-  前端前端前端前端
+          <p>前端前端前端前端前端 前端前端前端前端前端 前端前端前端前端前端 前端前端前端前端前端 前端前端前端前端前端 前端前端前端前端前端 前端前端前端前端 前端前端前端前端前端 前端前端前端前端前端前端前端前端前端 前端前端前端前端前端前端前端前端前端
+            前端前端前端前端
           </p>
         </div>
         <div class="middle_box">
           <p class="middle_pink">How</p>
           <p>前端前端前端前端前端 前端前端前端前端前端 前端前端前端前端前端 前端前端前端前端前端</p>
           <span>what---------</span>
-          <span class="span_special"><em>40%</em></span>
+          <span class="span_special">
+            <em>40%</em>
+          </span>
           <br>
           <span>what---------</span>
-          <span class="span_special"><em>40%</em></span>
+          <span class="span_special">
+            <em>40%</em>
+          </span>
           <br>
           <span>what---------</span>
-          <span class="span_special"><em>40%</em></span>
+          <span class="span_special">
+            <em>40%</em>
+          </span>
           <br>
         </div>
       </article>
@@ -76,26 +82,65 @@
       <article class="article_bottom">
         <div class="left">
           <!-- 左上边 -->
-            <div class="left_top">
-                <p><span style="color: #f5e327;font-size: 72px;font-family:'Microsoft YaHei';font-weight: bold"> <em>THE</em></span> TECHNOLOGE <br> OF FRONT</p>
-                <p>前端技术领域</p>
-                <h5></h5>
-              </div>
-              <div>
-                <span>前</span>
-                <span>端前端</span>
-              </div>
-              <div>
-                <span>前端</span>
-                <img src="./left_bottom_pic.png" alt="">
-              </div>
-
+          <div class="left_top">
+            <p>
+              <span style="color: #f5e327;font-size: 72px;font-family:'Microsoft YaHei';font-weight: bold">
+                <em>THE</em>
+              </span> TECHNOLOGE
+              <br> OF FRONT</p>
+            <p>前端技术领域</p>
+            <h5></h5>
+          </div>
+          <div class="left_top_sub_div">
+            <span class="left_top_sub_div_span">前</span>
+            <div>端前端端前端端前端前端端前端端前端 前端端前端端前端前端端前端端前端前端端 前端端前端前端端前端端前端前端端前端端 前端前端端前端端前端前端端前端端前端前 端端前端端前端前端端前端端前端前端端前 端端前端前端端端端前端前端端端前端端
+              前端前端端前端端前端前端端前端端前端前 端端前端端前端前端端前端端前端前端端前 端端前端前端端端端前端前端端端前端端
+            </div>
+          </div>
+          <div class="left_bottom_sub_div">
+            <img src="./left_bottom_pic.png" alt="" id="img">
+            <span class="left_bottom_sub_span">前端前端前端前端前端前端前端前端前端前端前端前端前端 前端前端前端前端前端前端前端前端前端前端前端前端前端前端前端前端前端前端前端前端前端前端 前端前端前端前端前端前端前端前端前端前端前端前端前端前端前端前端前端前端前端前端前端前端
+              前端前端前端前端前端前端前端前端前端前端前端前端前端前端前端前端前端前端前端前端前端前端 前端前端前端前端前端前端前端前端前端前端前端前端前端前端前端前端前端前端前端前端前端前端 前端前端前端前端前端前端前端前端前端前端前端前端前端前端前端前端前端前端前端前端前端前端
+              前端前端前端前端前端前端前端前端前端前端前端前端前端前端前端前端前端前端前端前端前端前端 前端前端前端前端前端前端前端前端前端前端前端前端前端前端前端前端前端前端前端前端前端前端 前端前端前端前端前端前端前端前端前端前端前端前端前端前端前端前端前端前端前端前端前端前端
+              前端前端前端前端前端前端前端前端前端前端前端前端前端前端前端前端前端前端前端前端前端前端
+            </span>
+          </div>
         </div>
         <div class="right">
-          <!-- 左下边 -->
-            <div class="left_bottom">
-                
+          <!-- 右上边 -->
+          <div class="right_top">
+            <div class="right_top_sub_div_optical"></div>
+            <div class="divider">
+              <h4></h4>
+              <p>前端技术</p>
+              <span>
+                <em>前端技术前端技术</em>
+              </span>
             </div>
+          </div>
+          <!-- 右下边 -->
+          <div class="right_bottom">
+
+            <div class="right_bottom_sub_top">
+              <ul>
+                <li>前端前端前端前端前端前端前端前端前端............
+                  <em>前端</em>
+                </li>
+                <li>前端前端前端前端前端前端前端前端前端............
+                  <em>前端</em>
+                </li>
+                <li>前端前端前端前端前端前端前端前端前端............
+                  <em>前端</em>
+                </li>
+              </ul>
+            </div>
+            <div class="right_bottom_left">
+
+            </div>
+            <div class="right_bottom_right">
+
+            </div>
+          </div>
         </div>
       </article>
 
