修改:完成第六课

--- a/css/train/lesson6/lesson.html
+++ b/css/train/lesson6/lesson.html
@@ -122,23 +122,49 @@
           <div class="right_bottom">
 
             <div class="right_bottom_sub_top">
-              <ul>
-                <li>前端前端前端前端前端前端前端前端前端............
+              <ul id="aaa">
+                <li>前端前端前端前端前端前端前端前端前端...............................
                   <em>前端</em>
                 </li>
-                <li>前端前端前端前端前端前端前端前端前端............
+                <li>前端前端前端前端前端前端前端前端前端..............................
                   <em>前端</em>
                 </li>
-                <li>前端前端前端前端前端前端前端前端前端............
+                <li>前端前端前端前端前端前端前端前端前端.............................
                   <em>前端</em>
-                </li>
+                  <li>前端前端前端前端前端前端前端前端前端.............................
+                    <em>前端</em>
+                    <li>前端前端前端前端前端前端前端前端前端.............................
+                      <em>前端</em>
+                    </li>
               </ul>
             </div>
-            <div class="right_bottom_left">
+            <div class="right_bottom_sub_bottom">
+              <div class="right_bottom_left">
+                <span>0</span>
+                <h4></h4>
+                <div class="text">
+                  <h4>
+                    <em>ONE TWO</em>
+                    <br>
+                    <em>THREE FORE FIVE</em>
+                  </h4>
+                  <br>
 
-            </div>
-            <div class="right_bottom_right">
-
+                  <p id="p_text">hello world hello world hello
+                    <br> hello world
+                    <br> hello world
+                  </p>
+                </div>
+              </div>
+              <div class="right_bottom_right">
+                    <p><span>“</span> hello world hello hello  <br>
+                     hello world hello hel<br>
+                     hello world hello hel<br>
+                     hello world hello hel<br>
+                     hello world hello hel<br>
+                     <span>”</span>
+                    </p>
+              </div>
             </div>
           </div>
         </div>
@@ -146,7 +172,11 @@
 
     </section>
     <!-- 尾部 -->
-    <footer></footer>
+    <footer class="footer">
+      <div>
+        <span>ife.baidu.com</span>
+      </div>
+    </footer>
   </div>
 
 </body>
