修改:计算器样式

--- a/js/calculator.html
+++ b/js/calculator.html
@@ -1,14 +1,63 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <meta http-equiv="X-UA-Compatible" content="ie=edge">
   <title>Document</title>
+  <style>
+    div {
+      width: 500px;
+      height: 500px;
+      position: absolute;
+      left: 50%;
+      top: 50%;
+      margin-left: -250px;
+      margin-top: -250px;
+    }
+
+    .btn {
+      margin-left: 10px;
+      width: 30px;
+      height: 30px;
+      font-size: 20px;
+    }
+
+    .input_text{
+      height: 25px;
+      text-align: center
+    }
+  </style>
 </head>
+
 <body>
-  
-  
+
+  <div>
+
+    <p>
+      <input type="text"  class="input_text">
+      <span>+</span>
+      <input type="text"  class="input_text">
+      <span>=</span>
+      <span></span>
+    </p>
+    <p>
+      <input type="button" value="+" class="btn">
+      <input type="button" value="-" class="btn">
+      <input type="button" value="*" class="btn">
+      <input type="button" value="÷" class="btn">
+    </p>
+
+
+  </div>
+
+
+
+
+  <script>
+  </script>
 
 </body>
+
 </html>
