--- a/js/calculator.html
+++ b/js/calculator.html
@@ -37,12 +37,12 @@
 
     <p>
       <input type="text"  class="input_text">
-      <span>+</span>
+      <span id="sign">+</span>
       <input type="text"  class="input_text">
       <span>=</span>
-      <span></span>
+      <span id="result"></span>
     </p>
-    <p>
+    <p class="control">
       <input type="button" value="+" class="btn">
       <input type="button" value="-" class="btn">
       <input type="button" value="*" class="btn">
@@ -52,10 +52,11 @@
 
   </div>
 
-
-
-
   <script>
+
+      
+
+
   </script>
 
 </body>
