--- a/js/calculator.html
+++ b/js/calculator.html
@@ -90,15 +90,15 @@
     <p class="control">
       <input type="button" value="+" class="btn" title="add">
       <input type="button" value="-" class="btn" title="subtract">
-      <input type="button" value="*" class="btn" title="multipy">
+      <input type="button" value="×" class="btn" title="multipy">
       <input type="button" value="÷" class="btn" title="division">
+      <input type="button" value="%" class="btn" title="mod">
     </p>
 
 
   </div>
 
   <script>
-
     //管理代码
     var calcElem = {
       first_input_number: document.querySelector('.input_text_first'),
@@ -108,30 +108,20 @@
       btns: document.querySelectorAll('.btn')
     }
 
-
     console.log('execute....');
 
     each(calcElem.btns, function (index, elem) {
       elem.onclick = function () {
-        switch (this.title) {
-          case 'add':
-            console.log('here');
-            addHandler();
-            break;
-          case 'subtract':
-            subtractHandler();
-            break;
-          case 'multipy':
-            multipyHandler();
-            break;
-          case 'division':
-            divisionHandler();
-            break;
-          default:
-            break;
-        }
+        updateSign(this.value);
+        outputResult(operate(this.title, calcElem.first_input_number.value, calcElem.last_input_number.value));
       }
     })
+
+    function operate(name,num1,num2) {
+       console.log('num1:'+num1+"|"+'num2:'+num2);
+       //if(!opreation[name]) throw new Error('can not found this method');
+       return opreation[name](num1,num2);
+    }
 
 
 
@@ -148,6 +138,7 @@
       3、在HTML中加载script代码有两种方式  一种是内嵌式 一种是外部引入式。内嵌式 是在HTML body或者head中插入script标签，然后在内部写代码
         而外部引入式是在head插入script标签然后通过src属性来引入源文件地址.
       4、获取DOM元素可以通过querySelectorAll 或者getElementById()方法来做
+      5、开放封闭原则 可以添加新功能，但新功能不能深入代码中去修改，只能通过的暴露的接口来增加功能，内部的实现是个黑盒子。
     */
 
 
@@ -157,7 +148,7 @@
      2、功能封住
     */
 
-      //管理代码
+    //管理代码
     var opreation = {
       add: function (num1, num2) {
         return (Number.parseInt(num1, 10)) + Number.parseInt(num2, 10)
@@ -173,46 +164,29 @@
 
       division: function (num1, num2) {
         return (Number.parseInt(num1, 10)) / (Number.parseInt(num2, 10));
+      },
+
+      addOperation:function (name,fn) {
+         if(this[name]){
+           throw new Error('方法已经存在');
+         }else{
+           this[name]=fn;
+           return this;
+         }
       }
     }
+
+    opreation.addOperation('mod',function (num1,num2) {
+      return num1 % num2;
+    });
+
 
     function updateSign(symbol) {
       calcElem.sign.innerHTML = symbol;
     }
 
-
-
     function outputResult(ret) {
       calcElem.result.innerHTML = ret;
-    }
-
-    function addHandler() {
-      updateSign("+");
-      outputResult(opreation.add(calcElem.first_input_number.value, calcElem.last_input_number.value));
-    }
-
-    function subtractHandler() {
-
-      updateSign("-");
-
-      outputResult(opreation.subtract(calcElem.first_input_number.value, calcElem.last_input_number.value));
-
-    }
-
-    function multipyHandler() {
-
-      updateSign("×");
-
-      outputResult(opreation.multipy(calcElem.first_input_number.value, calcElem.last_input_number.value));
-
-    }
-
-    function divisionHandler() {
-
-      updateSign("÷");
-
-      outputResult(opreation.division(calcElem.first_input_number.value, calcElem.last_input_number.value));
-
     }
   </script>
 
