--- a/extra_prj/budget/index.html
+++ b/extra_prj/budget/index.html
@@ -12,7 +12,7 @@
         <div class="top">
             <div class="budget">
                 <div class="budget__title">
-                    Available Budget in <span class="budget__title--month">%Month%</span>:
+                    Available Budget in <span class="budget__title--month">Sep 2018</span>:
                 </div>
                 
                 <div class="budget__value">+ 2,345.64</div>
@@ -97,7 +97,7 @@
                                 <div class="item__value">- 900.00</div>
                                 <div class="item__percentage">21%</div>
                                 <div class="item__delete">
-                                    <button class="item__delete--btn"><i class="ion-ios-close-outline"></i></button>
+                                    <button class="item__delete__btn"><i class="ion-ios-close-outline"></i></button>
                                 </div>
                             </div>
                         </div>
